# docschat

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  config.py  middleware.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  chat.py  collections.py  conversations.py  health.py  ingest.py  search.py
cli/: app.py  chat_cmd.py  collections_cmd.py  ingest_cmd.py  status_cmd.py
core/: chunker.py  embeddings.py  ingestion.py  rag.py  retriever.py
database/: __init__.py  connection.py  repositories.py
providers/: __init__.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
tests/: conftest.py  test_api.py  test_chunker.py  test_cli.py  test_ingestion.py  test_rag.py
