[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docschat"
version = "1.0.0"
description = "RAG chat system: ingest documents, embed in ChromaDB, and chat with any LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "brolyroly007"}]
keywords = ["rag", "chat", "documents", "chromadb", "openai", "gemini", "ollama", "fastapi", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
docschat = "cli.app:run"

[project.urls]
Homepage = "https://github.com/brolyroly007/docschat"
Repository = "https://github.com/brolyroly007/docschat"
Issues = "https://github.com/brolyroly007/docschat/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["api", "cli", "core", "database", "providers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
